# yet_another_test_project

./: README.md  package.json  volar.config.js
src/: App.vue  connectors.ts  enums.ts  main.ts  router.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: log_commands.rs  mod.rs  mongo_commands.rs  pg_commands.rs  redis_commands.rs
src-tauri/src/connection/: common.rs  mod.rs  mongo_connection.rs  pg_connection.rs  redis_connection.rs
src-tauri/src/state/: active_connections.rs  mod.rs  navigation.rs
src-tauri/src/ui/: menu.rs
src/components/: ConnectionSelection.vue  ConnectionSideNav.vue  Greet.vue  Home.vue  NewConnectionSideNav.vue  Router.vue
src/components/connection/: MongoConnection.vue  PostgresConnection.vue  RedisConnection.vue
src/events/: menuEvents.ts
src/store/: mongoStore.ts  primaryStore.ts
src/utils/: logging.ts
