[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "db-manager-thing"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.1", features = ["api-all"] }


# Database
mongodb = "2.3.1"
sqlx = {version = "0.6.2", features = ["mssql", "postgres", "mysql", "sqlite", "any", "uuid", "chrono", "json", "runtime-tokio-rustls"] }
redis = { version = "0.22.1", features = ["json", "tokio-comp"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
